# paintify

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-05-07-color-names.md  2026-05-07-debug-logging.md  2026-05-07-remove-future-annotations.md  2026-05-07-stable-color-numbering.md
docs/superpowers/specs/: 2026-05-07-feature-roadmap-design.md
example/: manifest.json  palette.json
src/paintify/: __init__.py  models.py  pipeline.py
src/paintify/cli/: __init__.py  factory.py  main.py
src/paintify/config/: __init__.py  settings.py
src/paintify/processing/: __init__.py  color.py  color_names.py  image.py  labels.py  palette.py  quantization.py  region_fill.py  region_reduce.py  region_table.py  regions.py
src/paintify/rendering/: __init__.py  artifacts.py  json.py  png.py  svg.py  writer.py
tests/: test_application_architecture.py  test_cli.py  test_image_io.py  test_integration.py  test_labels.py  test_palette.py  test_presets_config.py  test_quantize.py  test_regions.py
