[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[project]
name = "paintify"
version = "0.3.0"
description = "Generate paint-by-numbers artifacts from an input image."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
keywords = ["image-processing", "paint-by-numbers", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Utilities",
]
dependencies = [
  "numpy>=1.24",
  "rich>=13.0",
  "typer>=0.9",
  "opencv-python-headless>=4.13.0.92",
]

[project.scripts]
paintify = "paintify.cli:app"

[dependency-groups]
dev = [
  "flake8>=7.3.0",
  "prek>=0.2.0",
  "pytest>=7.4",
  "ruff>=0.4",
  "ty>=0.0.1a21",
  "wemake-python-styleguide>=1.6.2",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN401",
  "D203",
  "D212",
  "COM812",
  "ISC001",
  "D100",
  "D101",
  "D102",
  "D103",
  "TRY003",
  "EM101",
  "EM102",
  "D104",
  "D107",
  "FBT001",
  "FBT002",
  "N818",
  "SLOT000",
  "TC001",
  "TC002",
  "TC003",
]

[tool.ruff.lint.per-file-ignores]
"src/paintify/cli/main.py" = ["B008", "FBT003", "PLR0913"]
"src/paintify/pipeline.py" = ["PLR0913"]
"src/paintify/processing/region_table.py" = ["PLR0913"]
"tests/**/*.py" = [
  "D102",
  "D103",
  "PLR2004",
  "S101",
]

[tool.ty.environment]
python-version = "3.12"
